update contact file

--- a/contact.html
+++ b/contact.html
@@ -1,112 +1,1 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>zoo website</title>
-    <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"rel="stylesheet" />
-    <link href="StyleSheet.css" rel="stylesheet" />
-</head>
-<body>
-    <header class="header">
-        <nav class="navbar navbar-expand-lg fixed-top py-3">
-            <div class="container">
-
-                <div id="navbarSupportedContent" class="collapse navbar-collapse">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active"><a href="#" class="nav-link text-uppercase font-weight-bold">Home <span class="sr-only">(current)</span></a></li>
-                        <li class="nav-item"><a href="StyleSheet.css" class="nav-link text-uppercase font-weight-bold">About</a></li>
-                        <li class="nav-item"><a href="StyleSheet.css" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <br /><br /><br />
-    <div class="container">
-        <div id="vv"> <h1><i><u>aniemals</u></i></h1></div><br /><br />
-        <div class="row">
-            <div id="mm">
-                <div class="col-4">
-                    <img id="ii" src="https://files.worldwildlife.org/wwfcmsprod/images/Tiger_resting_Bandhavgarh_National_Park_India/hero_small/6aofsvaglm_Medium_WW226365.jpg" />
-                </div>
-                <div id="bb">  <h2>tiger</h2>  </div>
-
-                <div id="pp" class="col-4">
-                    <p>
-                        <u> <b>The tiger</b></u> (Panthera tigris) is the largest living cat species and a member of the genus Panthera.
-                        It is most recognisable for its dark vertical stripes on orange fur with a white underside.
-                        An apex predator, it primarily preys on ungulates, such as deer and wild boar.
-                        It is territorial and generally a solitary but social predator, requiring large contiguous areas of habitat to support its requirements for prey and rearing of its offspring.
-                        Tiger cubs stay with their mother for about two years and then become independent, leaving their mother's home range to establish their own.
-
-                    </p>
-                </div>
-            </div>
-        </div>
-
-    </div>
-    <hr /><br /><br /><br /><br />
-    <img id="gg" src="NewFolder1/1672606517_742_صور-نمر-Tiger-اجمل-خلفيات-نمور-بجودة-HD.jpg" />
-    <div id="ss" class="container">
-
-        <h3 id="hh">The number of tiger at the most country around the word</h3><br />
-
-        <ul id="ll">
-            <li><b> India : 3682-3925 </b> </li>
-            <li><b> Indonesia : 400-600 </b></li>
-            <li> <b> Russia : 480-540 </b> </li>
-
-
-
-
-        </ul>
-        <br /><br />
-
-    </div>
-    <div id="ff" class="container">
-        <h2 id="tt"> This video for tiger in the forest</h2>
-
-        <video id="kk" controls="controls" preload="auto">
-            <source src="NewFolder1/pexels-nipen-7246228%20(1080p).mp4" type="video/mp4" />
-        </video>
-
-
-
-
-
-    </div>
-    <br /><br /><br />  <br /><br /><br />
-
-
-    <div class="container">
-        <h2 id="aa">NUM Triggers </h2>
-        <ul class="responsive-table">
-            <li class="table-header">
-                <div class="col col-1">country</div>
-                <div class="col col-1">year</div>
-                <div class="col col-3">estimate</div>
-            </li>
-            <li class="table-row">
-                <div class="col col-1" data-label="Job Id">russia</div>
-                <div class="col col-1" data-label="Customer Name">2020</div>
-                <div class="col col-3" data-label="Amount">600</div>
-
-            </li>
-            <li class="table-row">
-                <div class="col col-1" data-label="Job Id">india</div>
-                <div class="col col-1" data-label="Customer Name">2023</div>
-                <div class="col col-3" data-label="Amount">3800</div>
-
-            </li>
-            <li class="table-row">
-                <div class="col col-1" data-label="Job Id">indonesia</div>
-                <div class="col col-1" data-label="Customer Name">2016</div>
-                <div class="col col-3" data-label="Amount">500</div>
-            </li>
-
-        </ul>
-    </div>
-
-
-</body>
-</html>
+﻿Contact
