--- a/contact.html
+++ b/contact.html
@@ -1,2 +1,59 @@
-﻿Contact
- in github
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>zoo website</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="StyleSheet.css" rel="stylesheet" />
+</head>
+<body>
+
+    <div class="container">
+        <br /> <br /> <br />
+        <h2 id="aa">NUM Triggers </h2>
+        <ul class="responsive-table">
+            <li class="table-header">
+                <div class="col col-1">country</div>
+                <div class="col col-1">year</div>
+                <div class="col col-3">estimate</div>
+            </li>
+            <li class="table-row">
+                <div class="col col-1" data-label="country">russia</div>
+                <div class="col col-1" data-label="year">2020</div>
+                <div class="col col-3" data-label="num">600</div>
+
+            </li>
+            <li class="table-row">
+                <div class="col col-1" data-label="Job Id">india</div>
+                <div class="col col-1" data-label="Customer Name">2023</div>
+                <div class="col col-3" data-label="Amount">3800</div>
+
+            </li>
+            <li class="table-row">
+                <div class="col col-1" data-label="Job Id">indonesia</div>
+                <div class="col col-1" data-label="Customer Name">2016</div>
+                <div class="col col-3" data-label="Amount">500</div>
+            </li>
+
+        </ul>
+    </div>
+
+
+</body>
+
+
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
