--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active"><a href="#" class="nav-link text-uppercase font-weight-bold">Home <span class="sr-only">(current)</span></a></li>
                         <li class="nav-item"><a href="contact.html" class="nav-link text-uppercase font-weight-bold">About</a></li>
-                        <li class="nav-item"><a href="StyleSheet.css" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
+                        <li class="nav-item"><a href="index2.html" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -78,35 +78,5 @@
     <br /><br /><br />  <br /><br /><br />
 
 
-    <div class="container">
-        <h2 id="aa">NUM Triggers </h2>
-        <ul class="responsive-table">
-            <li class="table-header">
-                <div class="col col-1">country</div>
-                <div class="col col-1">year</div>
-                <div class="col col-3">estimate</div>
-            </li>
-            <li class="table-row">
-                <div class="col col-1" data-label="Job Id">russia</div>
-                <div class="col col-1" data-label="Customer Name">2020</div>
-                <div class="col col-3" data-label="Amount">600</div>
-
-            </li>
-            <li class="table-row">
-                <div class="col col-1" data-label="Job Id">india</div>
-                <div class="col col-1" data-label="Customer Name">2023</div>
-                <div class="col col-3" data-label="Amount">3800</div>
-
-            </li>
-            <li class="table-row">
-                <div class="col col-1" data-label="Job Id">indonesia</div>
-                <div class="col col-1" data-label="Customer Name">2016</div>
-                <div class="col col-3" data-label="Amount">500</div>
-            </li>
-
-        </ul>
-    </div>
-
-
-</body>
+   </body>
 </html>
